--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1,3 +1,7 @@
+*{
+    margin:0;
+    padding:0;
+}
 nav{
     height:50px;
     background-color:#484848;
@@ -6,6 +10,11 @@ nav{
     display:flex;
     align-items:center;
     justify-content:end;
+    list-style-type:none;
+    overflow:hidden;
+    position:fixed;
+    top:0;
+    width:100%;
 }
 nav li{
     padding:10px;
@@ -14,7 +23,19 @@ nav li{
 }
 a{
     text-decoration:none;
+    color:orange;
 }
 a:hover{
-    text-decoration:none;
+    color:#8961b5;
+}
+section{
+    min-height:480px;
+    background-color:#484848;
+    color:orange;
+    padding:10px;
+    border:2px dotted #8961b5;
+}
+section:hover{
+    background-color:#181818;
+    color:rgb(255,188,63);
 }
