--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -59,11 +59,31 @@ p{
 }
 .git img{
     float:left;
-    width:100px;
-    height:100px;
+    width:80px;
+    height:80px;
 }
 .github img{
     float:right;
     width:100px;
     height:100px;
+}
+#projetos{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.projeto{
+    height:300px;
+    width:300px;
+    border:#9920a3 solid 5px;
+    margin:10px;
+}
+.projeto>img{
+    width:100%;
+}
+.labels span{
+    color:white !important;
+    background-color:rgb(185, 120, 0);
+    border-radius:10px;
+    padding:2px 5px;
 }
