--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -88,3 +88,22 @@ p{
     border-radius:10px;
     padding:2px 5px;
 }
+#redes_sociais{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-wrap:wrap;
+}
+.rede_social{
+    height:300px;
+    width:300px;
+    border:#9920a3 solid 5px;
+    margin:10px;
+}
+.rede_social>img{
+    width:100%;
+}
+.discord{
+    width:100%;
+    height:250px;
+}
