--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -111,3 +111,8 @@ p{
     width:100%;
     height:250px;
 }
+#rodape{
+    background-color:rgb(241, 113, 113);
+    color:white;
+    text-align:center;
+}
